trades detail fix
